  The objects' _p_oid and _p_jar variables weren't cleared, leading to
  surprizing errors.

- ZEO extension methods failed when a client reconnected to a
  storage. (https://bugs.launchpad.net/zodb/+bug/143344)

- Objects added in transactions that were later aborted could have
  _p_changed still set (https://bugs.launchpad.net/zodb/+bug/615758).

3.10.0b6 (2010-09-08)
=====================

Bugs fixed
----------

- Process exits or database closes could cause ZEO caches to have
  incorrect data due to a problem in the way invalidations were processed.

- Database connections didn't invalidate cache entries when conflict
  errors were raised in response to checkCurrentSerialInTransaction
  errors. Normally, this shouldn't be a problem, since there should be
  pending invalidations for these oids which will cause the object to
  be invalidated. There have been issues with ZEO persistent cache
  management that have caused out of date data to remain in the cache.
  (It's possible that the last of these were addressed in the
  3.10.0b5.) Invalidating read data when there is a conflict error
  provides some extra insurance.

- The interface, ZODB.interfaces.IStorage was incorrect. The store
  method should never return a sequence of oid and serial pairs.

3.10.0b5 (2010-09-02)
=====================

Bugs fixed
----------

- Added a new API that allows applications to make sure that current
  data are read. For example, with::

    self._p_jar.readCurrent(ob)

  A conflict error will be raised if the version of ob read by the
  transaction isn't current when the transaction is committed.

  Normally, ZODB only assures that objects read are consistent, but not
  necessarily up to date.  Checking whether an object is up to date is
  important when information read from one object is used to update
  another.

  BTrees are an important case of reading one object to update
  another.  Internal nodes are read to decide which leave notes are